Test related changes for iMX8M Nano

--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -108,6 +108,7 @@ source "board/freescale/imx8mq_phanbell/Kconfig"
 source "board/freescale/imx8mq_aiy/Kconfig"
 source "board/freescale/imx8mm_evk/Kconfig"
 source "board/freescale/imx8mm_val/Kconfig"
+source "board/embeddedartists/common/Kconfig"
 source "board/embeddedartists/mx8mqea-com/Kconfig"
 source "board/embeddedartists/mx8mmea-ucom/Kconfig"
 source "board/embeddedartists/mx8mnea-ucom/Kconfig"
