--- a/arch/arm/mach-imx/imx8m/Kconfig
+++ b/arch/arm/mach-imx/imx8m/Kconfig
@@ -63,6 +63,12 @@ config TARGET_IMX8MQ_DDR4_VAL
 	bool "imx8mq_ddr4_val"
 	select IMX8MQ
 
+config TARGET_MX8MQEA_COM
+	bool "mx8mqea_com"
+	select IMX8MQ
+	select SUPPORT_SPL
+	select IMX8M_LPDDR4
+
 config TARGET_IMX8MM_DDR4_VAL
 	bool "imx8mm DDR4 validation board"
 	select IMX8MM
@@ -87,6 +93,12 @@ config TARGET_IMX8MM_DDR4_EVK
 	select SUPPORT_SPL
 	select IMX8M_DDR4
 
+config TARGET_MX8MMEA_UCOM
+	bool "mx8mmea_ucom"
+	select IMX8MM
+	select SUPPORT_SPL
+	select IMX8M_LPDDR4
+
 config TARGET_IMX8MN_EVK
 	bool "imx8mn LPDDR4 EVK board"
 	select IMX8MN
@@ -95,6 +107,12 @@ config TARGET_IMX8MN_EVK
 
 config TARGET_IMX8MN_DDR4_EVK
 	bool "imx8mn DDR4 EVK board"
+	select IMX8MN
+	select SUPPORT_SPL
+	select IMX8M_DDR4
+
+config TARGET_MX8MNEA_UCOM
+	bool "mx8mnea_ucom"
 	select IMX8MN
 	select SUPPORT_SPL
 	select IMX8M_DDR4
@@ -139,5 +157,9 @@ source "board/freescale/imx8mm_val/Kconfig"
 source "board/freescale/imx8mn_evk/Kconfig"
 source "board/freescale/imx8mp_evk/Kconfig"
 source "board/toradex/verdin-imx8mm/Kconfig"
+source "board/embeddedartists/common/Kconfig"
+source "board/embeddedartists/mx8mqea-com/Kconfig"
+source "board/embeddedartists/mx8mmea-ucom/Kconfig"
+source "board/embeddedartists/mx8mnea-ucom/Kconfig"
 
 endif
