--- a/configs/mx8mmea-ucom_defconfig
+++ b/configs/mx8mmea-ucom_defconfig
@@ -42,10 +42,10 @@ CONFIG_SYS_I2C_MXC=y
 CONFIG_DM_MMC=y
 # CONFIG_DM_PMIC=y
 CONFIG_EFI_PARTITION=y
-CONFIG_DM_SPI_FLASH=y
-CONFIG_SPI_FLASH=y
-CONFIG_SPI_FLASH_ISSI=y
-CONFIG_SPI_FLASH_STMICRO=y
+# CONFIG_DM_SPI_FLASH is not set
+# CONFIG_SPI_FLASH is not set
+# CONFIG_SPI_FLASH_ISSI is not set
+# CONFIG_SPI_FLASH_STMICRO is not set
 CONFIG_DM_ETH=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_IMX8M=y
