EA: Moved ENV_OFFSET and ENV_SIZE fo defconfig

--- a/configs/mx7dea-com_defconfig
+++ b/configs/mx7dea-com_defconfig
@@ -2,6 +2,8 @@ CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/embeddedartists/mx7dea-com/imximage.c
 CONFIG_ARM=y
 CONFIG_ARCH_MX7=y
 CONFIG_TARGET_MX7DEA_COM=y
+CONFIG_ENV_SIZE=0x2000
+CONFIG_ENV_OFFSET=0x1FE000
 CONFIG_ARMV7_BOOT_SEC_DEFAULT=y
 CONFIG_IMX_RDC=y
 
@@ -62,14 +64,12 @@ CONFIG_DM_SPI_FLASH=y
 CONFIG_DM_USB=y
 CONFIG_CMD_SAVEENV=y
 CONFIG_ENV_IS_IN_MMC=y
-CONFIG_SPI_FLASH=y
 CONFIG_MMC_IO_VOLTAGE=y
 CONFIG_MMC_UHS_SUPPORT=y
 # CONFIG_MMC_HS200_SUPPORT is not set
 CONFIG_SPI_FLASH_MACRONIX=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_ISSI=y
-CONFIG_SPI_FLASH_BAR=y
 CONFIG_PHYLIB=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_IMX7=y
