--- a/configs/mx8mmea-ucom_defconfig
+++ b/configs/mx8mmea-ucom_defconfig
@@ -35,7 +35,8 @@ CONFIG_FASTBOOT_BUF_ADDR=0x42800000
 CONFIG_FASTBOOT_BUF_SIZE=0x40000000
 CONFIG_FASTBOOT_FLASH=y
 CONFIG_FASTBOOT_FLASH_MMC_DEV=0
-
+CONFIG_ENV_SIZE=0x2000
+CONFIG_ENV_OFFSET=0x1FE000
 CONFIG_DM_GPIO=y
 CONFIG_DM_I2C=y
 CONFIG_SYS_I2C_MXC=y
