--- a/configs/mx8mqea-com_defconfig
+++ b/configs/mx8mqea-com_defconfig
@@ -27,6 +27,8 @@ CONFIG_I2C_SET_DEFAULT_BUS_NUM=y
 CONFIG_I2C_DEFAULT_BUS_NUMBER=0x0
 CONFIG_CMD_I2C=y
 CONFIG_DM_I2C=y
+CONFIG_ENV_SIZE=0x2000
+CONFIG_ENV_OFFSET=0x1FE000
 CONFIG_DM_GPIO=y
 CONFIG_CMD_GPIO=y
 CONFIG_DM_MMC=y
