--- a/configs/mx6qea-com_defconfig
+++ b/configs/mx6qea-com_defconfig
@@ -2,7 +2,8 @@ CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/embeddedartists/mx6qea-com/imximage.c
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
 CONFIG_TARGET_MX6QEA_COM=y
-
+CONFIG_ENV_SIZE=0x2000
+CONFIG_ENV_OFFSET=0x1FE000
 CONFIG_SPL_GPIO_SUPPORT=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
