--- a/configs/mx6sxea-com_defconfig
+++ b/configs/mx6sxea-com_defconfig
@@ -2,8 +2,9 @@ CONFIG_SYS_EXTRA_OPTIONS="IMX_CONFIG=board/embeddedartists/mx6sxea-com/imximage.
 CONFIG_ARM=y
 CONFIG_ARCH_MX6=y
 CONFIG_TARGET_MX6SXEA_COM=y
+CONFIG_ENV_SIZE=0x2000
+CONFIG_ENV_OFFSET=0x1FE000
 CONFIG_IMX_RDC=y
-
 CONFIG_SPL_GPIO_SUPPORT=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
@@ -80,8 +81,6 @@ CONFIG_CI_UDC=y
 CONFIG_OF_LIBFDT=y
 CONFIG_OF_CONTROL=y
 CONFIG_OF_BOARD_FIXUP=y
-CONFIG_SPI_FLASH=y
-CONFIG_SPI_FLASH_BAR=y
 CONFIG_SPI_FLASH_SPANSION=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_ISSI=y
