--- a/arch/arm/dts/imx8mq-ea-com-kit_v2.dts
+++ b/arch/arm/dts/imx8mq-ea-com-kit_v2.dts
@@ -18,8 +18,7 @@
 /* First 128KB is for PSCI ATF. */
 /memreserve/ 0x40000000 0x00020000;
 
-#include "fsl-imx8mq.dtsi"
-#include "fsl-imx8mq-u-boot.dtsi"
+#include "imx8mq.dtsi"
 
 / {
 	model = "Embedded Artists i.MX8MQ COM Kit";
@@ -332,7 +331,7 @@
 &uart1 { /* console */
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_uart1>;
-	assigned-clocks = <&clk IMX8MQ_CLK_UART1_SRC>;
+	assigned-clocks = <&clk IMX8MQ_CLK_UART1>;
 	assigned-clock-parents = <&clk IMX8MQ_CLK_25M>;
 	status = "okay";
 };
@@ -382,33 +381,17 @@
 	status = "okay";
 };
 
-&usb3_0 {
-	status = "okay";
-};
-
 &usb_dwc3_0 {
-	status = "okay";
 	dr_mode = "peripheral";
+	status = "okay";
 };
 
 &usb3_phy1 {
 	status = "okay";
 };
 
-&usb3_1 {
-	status = "okay";
-};
-
 &usb_dwc3_1 {
-	status = "okay";
 	dr_mode = "host";
-};
-
-&gpu {
-	status = "okay";
-};
-
-&vpu {
 	status = "okay";
 };
 
