--- a/arch/arm/dts/imx8mn-ea-ucom-kit_v2.dts
+++ b/arch/arm/dts/imx8mn-ea-ucom-kit_v2.dts
@@ -14,7 +14,7 @@
 
 /dts-v1/;
 
-#include "fsl-imx8mn.dtsi"
+#include "imx8mn.dtsi"
 
 / {
 	model = "Embedded Artists i.MX8MN uCOM Kit";
@@ -44,199 +44,199 @@
 	imx8mnea-ucom {
 		pinctrl_hog_1: hoggrp-1 {
 			fsl,pins = <
-				MX8MN_IOMUXC_GPIO1_IO08__GPIO1_IO8		0x16
+				MX8MN_IOMUXC_GPIO1_IO08_GPIO1_IO8		0x16
 			>;
 		};
 
 		pinctrl_fec1: fec1grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_ENET_MDC__ENET1_MDC		0x3
-				MX8MN_IOMUXC_ENET_MDIO__ENET1_MDIO	0x3
-				MX8MN_IOMUXC_ENET_TD3__ENET1_RGMII_TD3	0x1f
-				MX8MN_IOMUXC_ENET_TD2__ENET1_RGMII_TD2	0x1f
-				MX8MN_IOMUXC_ENET_TD1__ENET1_RGMII_TD1	0x1f
-				MX8MN_IOMUXC_ENET_TD0__ENET1_RGMII_TD0	0x1f
-				MX8MN_IOMUXC_ENET_RD3__ENET1_RGMII_RD3	0x91
-				MX8MN_IOMUXC_ENET_RD2__ENET1_RGMII_RD2	0x91
-				MX8MN_IOMUXC_ENET_RD1__ENET1_RGMII_RD1	0x91
-				MX8MN_IOMUXC_ENET_RD0__ENET1_RGMII_RD0	0x91
-				MX8MN_IOMUXC_ENET_TXC__ENET1_RGMII_TXC	0x1f
-				MX8MN_IOMUXC_ENET_RXC__ENET1_RGMII_RXC	0x91
-				MX8MN_IOMUXC_ENET_RX_CTL__ENET1_RGMII_RX_CTL	0x91
-				MX8MN_IOMUXC_ENET_TX_CTL__ENET1_RGMII_TX_CTL	0x1f
-				MX8MN_IOMUXC_NAND_READY_B__GPIO3_IO16	0x19
+				MX8MN_IOMUXC_ENET_MDC_ENET1_MDC		0x3
+				MX8MN_IOMUXC_ENET_MDIO_ENET1_MDIO	0x3
+				MX8MN_IOMUXC_ENET_TD3_ENET1_RGMII_TD3	0x1f
+				MX8MN_IOMUXC_ENET_TD2_ENET1_RGMII_TD2	0x1f
+				MX8MN_IOMUXC_ENET_TD1_ENET1_RGMII_TD1	0x1f
+				MX8MN_IOMUXC_ENET_TD0_ENET1_RGMII_TD0	0x1f
+				MX8MN_IOMUXC_ENET_RD3_ENET1_RGMII_RD3	0x91
+				MX8MN_IOMUXC_ENET_RD2_ENET1_RGMII_RD2	0x91
+				MX8MN_IOMUXC_ENET_RD1_ENET1_RGMII_RD1	0x91
+				MX8MN_IOMUXC_ENET_RD0_ENET1_RGMII_RD0	0x91
+				MX8MN_IOMUXC_ENET_TXC_ENET1_RGMII_TXC	0x1f
+				MX8MN_IOMUXC_ENET_RXC_ENET1_RGMII_RXC	0x91
+				MX8MN_IOMUXC_ENET_RX_CTL_ENET1_RGMII_RX_CTL	0x91
+				MX8MN_IOMUXC_ENET_TX_CTL_ENET1_RGMII_TX_CTL	0x1f
+				MX8MN_IOMUXC_NAND_READY_B_GPIO3_IO16	0x19
 			>;
 		};
 
 		pinctrl_flexspi0: flexspi0grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_NAND_ALE__QSPI_A_SCLK 0x1c4
-				MX8MN_IOMUXC_NAND_CE0_B__QSPI_A_SS0_B 0x84
+				MX8MN_IOMUXC_NAND_ALE_QSPI_A_SCLK 0x1c4
+				MX8MN_IOMUXC_NAND_CE0_B_QSPI_A_SS0_B 0x84
 
-				MX8MN_IOMUXC_NAND_DQS__QSPI_A_DQS 0x40000084
-				MX8MN_IOMUXC_NAND_DATA00__QSPI_A_DATA0 0x84
-				MX8MN_IOMUXC_NAND_DATA01__QSPI_A_DATA1 0x84
-				MX8MN_IOMUXC_NAND_DATA02__QSPI_A_DATA2 0x84
-				MX8MN_IOMUXC_NAND_DATA03__QSPI_A_DATA3 0x84
+				MX8MN_IOMUXC_NAND_DQS_QSPI_A_DQS 0x40000084
+				MX8MN_IOMUXC_NAND_DATA00_QSPI_A_DATA0 0x84
+				MX8MN_IOMUXC_NAND_DATA01_QSPI_A_DATA1 0x84
+				MX8MN_IOMUXC_NAND_DATA02_QSPI_A_DATA2 0x84
+				MX8MN_IOMUXC_NAND_DATA03_QSPI_A_DATA3 0x84
 			>;
 		};
 
 		pinctrl_i2c1: i2c1grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_I2C1_SCL__I2C1_SCL			0x400001c3
-				MX8MN_IOMUXC_I2C1_SDA__I2C1_SDA			0x400001c3
+				MX8MN_IOMUXC_I2C1_SCL_I2C1_SCL			0x400001c3
+				MX8MN_IOMUXC_I2C1_SDA_I2C1_SDA			0x400001c3
 			>;
 		};
 
 		pinctrl_i2c2: i2c2grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_I2C2_SCL__I2C2_SCL			0x400001c3
-				MX8MN_IOMUXC_I2C2_SDA__I2C2_SDA			0x400001c3
+				MX8MN_IOMUXC_I2C2_SCL_I2C2_SCL			0x400001c3
+				MX8MN_IOMUXC_I2C2_SDA_I2C2_SDA			0x400001c3
 			>;
 		};
 
 		pinctrl_i2c3: i2c3grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_I2C3_SCL__I2C3_SCL			0x400001c3
-				MX8MN_IOMUXC_I2C3_SDA__I2C3_SDA			0x400001c3
+				MX8MN_IOMUXC_I2C3_SCL_I2C3_SCL			0x400001c3
+				MX8MN_IOMUXC_I2C3_SDA_I2C3_SDA			0x400001c3
 			>;
 		};
 
 		pinctrl_i2c1_gpio: i2c1grp-gpio {
 			fsl,pins = <
-				MX8MN_IOMUXC_I2C1_SCL__GPIO5_IO14        		0x1c3
-				MX8MN_IOMUXC_I2C1_SDA__GPIO5_IO15        	0x1c3
+				MX8MN_IOMUXC_I2C1_SCL_GPIO5_IO14		0x1c3
+				MX8MN_IOMUXC_I2C1_SDA_GPIO5_IO15		0x1c3
 			>;
 		};
 
 		pinctrl_i2c2_gpio: i2c2grp-gpio {
 			fsl,pins = <
-				MX8MN_IOMUXC_I2C2_SCL__GPIO5_IO16        		0x1c3
-				MX8MN_IOMUXC_I2C2_SDA__GPIO5_IO17        	0x1c3
+				MX8MN_IOMUXC_I2C2_SCL_GPIO5_IO16		0x1c3
+				MX8MN_IOMUXC_I2C2_SDA_GPIO5_IO17		0x1c3
 			>;
 		};
 
 		pinctrl_i2c3_gpio: i2c3grp-gpio {
 			fsl,pins = <
-				MX8MN_IOMUXC_I2C3_SCL__GPIO5_IO18        		0x1c3
-				MX8MN_IOMUXC_I2C3_SDA__GPIO5_IO19        	0x1c3
+				MX8MN_IOMUXC_I2C3_SCL_GPIO5_IO18		0x1c3
+				MX8MN_IOMUXC_I2C3_SDA_GPIO5_IO19		0x1c3
 			>;
 		};
 
 		pinctrl_pmic: pmicirq {
 			fsl,pins = <
-				MX8MN_IOMUXC_GPIO1_IO03__GPIO1_IO3		0x41
+				MX8MN_IOMUXC_GPIO1_IO03_GPIO1_IO3		0x41
 			>;
 		};
 
 		pinctrl_uart2: uart2grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_UART2_RXD__UART2_DCE_RX	0x49
-				MX8MN_IOMUXC_UART2_TXD__UART2_DCE_TX	0x49
+				MX8MN_IOMUXC_UART2_RXD_UART2_DCE_RX	0x49
+				MX8MN_IOMUXC_UART2_TXD_UART2_DCE_TX	0x49
 			>;
 		};
 
 		pinctrl_usdhc2_gpio: usdhc2grpgpio {
 			fsl,pins = <
-				MX8MN_IOMUXC_SD2_CD_B__GPIO2_IO12	0x41
-				MX8MN_IOMUXC_SD2_RESET_B__GPIO2_IO19	0x41
+				MX8MN_IOMUXC_SD2_CD_B_GPIO2_IO12	0x41
+				MX8MN_IOMUXC_SD2_RESET_B_GPIO2_IO19	0x41
 			>;
 		};
 
 		pinctrl_usdhc2: usdhc2grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_SD2_CLK__USDHC2_CLK		0x190
-				MX8MN_IOMUXC_SD2_CMD__USDHC2_CMD		0x1d0
-				MX8MN_IOMUXC_SD2_DATA0__USDHC2_DATA0	0x1d0
-				MX8MN_IOMUXC_SD2_DATA1__USDHC2_DATA1	0x1d0
-				MX8MN_IOMUXC_SD2_DATA2__USDHC2_DATA2	0x1d0
-				MX8MN_IOMUXC_SD2_DATA3__USDHC2_DATA3	0x1d0
-				MX8MN_IOMUXC_GPIO1_IO04__USDHC2_VSELECT	0x1d0
+				MX8MN_IOMUXC_SD2_CLK_USDHC2_CLK		0x190
+				MX8MN_IOMUXC_SD2_CMD_USDHC2_CMD		0x1d0
+				MX8MN_IOMUXC_SD2_DATA0_USDHC2_DATA0	0x1d0
+				MX8MN_IOMUXC_SD2_DATA1_USDHC2_DATA1	0x1d0
+				MX8MN_IOMUXC_SD2_DATA2_USDHC2_DATA2	0x1d0
+				MX8MN_IOMUXC_SD2_DATA3_USDHC2_DATA3	0x1d0
+				MX8MN_IOMUXC_GPIO1_IO04_USDHC2_VSELECT	0x1d0
 			>;
 		};
 
 		pinctrl_usdhc2_100mhz: usdhc2grp100mhz {
 			fsl,pins = <
-				MX8MN_IOMUXC_SD2_CLK__USDHC2_CLK		0x194
-				MX8MN_IOMUXC_SD2_CMD__USDHC2_CMD		0x1d4
-				MX8MN_IOMUXC_SD2_DATA0__USDHC2_DATA0	0x1d4
-				MX8MN_IOMUXC_SD2_DATA1__USDHC2_DATA1	0x1d4
-				MX8MN_IOMUXC_SD2_DATA2__USDHC2_DATA2	0x1d4
-				MX8MN_IOMUXC_SD2_DATA3__USDHC2_DATA3	0x1d4
-				MX8MN_IOMUXC_GPIO1_IO04__USDHC2_VSELECT	0x1d0
+				MX8MN_IOMUXC_SD2_CLK_USDHC2_CLK		0x194
+				MX8MN_IOMUXC_SD2_CMD_USDHC2_CMD		0x1d4
+				MX8MN_IOMUXC_SD2_DATA0_USDHC2_DATA0	0x1d4
+				MX8MN_IOMUXC_SD2_DATA1_USDHC2_DATA1	0x1d4
+				MX8MN_IOMUXC_SD2_DATA2_USDHC2_DATA2	0x1d4
+				MX8MN_IOMUXC_SD2_DATA3_USDHC2_DATA3	0x1d4
+				MX8MN_IOMUXC_GPIO1_IO04_USDHC2_VSELECT	0x1d0
 			>;
 		};
 
 		pinctrl_usdhc2_200mhz: usdhc2grp200mhz {
 			fsl,pins = <
-				MX8MN_IOMUXC_SD2_CLK__USDHC2_CLK		0x196
-				MX8MN_IOMUXC_SD2_CMD__USDHC2_CMD		0x1d6
-				MX8MN_IOMUXC_SD2_DATA0__USDHC2_DATA0	0x1d6
-				MX8MN_IOMUXC_SD2_DATA1__USDHC2_DATA1	0x1d6
-				MX8MN_IOMUXC_SD2_DATA2__USDHC2_DATA2	0x1d6
-				MX8MN_IOMUXC_SD2_DATA3__USDHC2_DATA3	0x1d6
-				MX8MN_IOMUXC_GPIO1_IO04__USDHC2_VSELECT	0x1d0
+				MX8MN_IOMUXC_SD2_CLK_USDHC2_CLK		0x196
+				MX8MN_IOMUXC_SD2_CMD_USDHC2_CMD		0x1d6
+				MX8MN_IOMUXC_SD2_DATA0_USDHC2_DATA0	0x1d6
+				MX8MN_IOMUXC_SD2_DATA1_USDHC2_DATA1	0x1d6
+				MX8MN_IOMUXC_SD2_DATA2_USDHC2_DATA2	0x1d6
+				MX8MN_IOMUXC_SD2_DATA3_USDHC2_DATA3	0x1d6
+				MX8MN_IOMUXC_GPIO1_IO04_USDHC2_VSELECT	0x1d0
 			>;
 		};
 
 		pinctrl_usdhc3: usdhc3grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_NAND_WE_B__USDHC3_CLK		0x40000190
-				MX8MN_IOMUXC_NAND_WP_B__USDHC3_CMD		0x1d0
-				MX8MN_IOMUXC_NAND_DATA04__USDHC3_DATA0		0x1d0
-				MX8MN_IOMUXC_NAND_DATA05__USDHC3_DATA1		0x1d0
-				MX8MN_IOMUXC_NAND_DATA06__USDHC3_DATA2		0x1d0
-				MX8MN_IOMUXC_NAND_DATA07__USDHC3_DATA3		0x1d0
-				MX8MN_IOMUXC_NAND_RE_B__USDHC3_DATA4		0x1d0
-				MX8MN_IOMUXC_NAND_CE2_B__USDHC3_DATA5		0x1d0
-				MX8MN_IOMUXC_NAND_CE3_B__USDHC3_DATA6		0x1d0
-				MX8MN_IOMUXC_NAND_CLE__USDHC3_DATA7		0x1d0
-				MX8MN_IOMUXC_NAND_CE1_B__USDHC3_STROBE 		0x190
+				MX8MN_IOMUXC_NAND_WE_B_USDHC3_CLK		0x40000190
+				MX8MN_IOMUXC_NAND_WP_B_USDHC3_CMD		0x1d0
+				MX8MN_IOMUXC_NAND_DATA04_USDHC3_DATA0		0x1d0
+				MX8MN_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x1d0
+				MX8MN_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x1d0
+				MX8MN_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x1d0
+				MX8MN_IOMUXC_NAND_RE_B_USDHC3_DATA4		0x1d0
+				MX8MN_IOMUXC_NAND_CE2_B_USDHC3_DATA5		0x1d0
+				MX8MN_IOMUXC_NAND_CE3_B_USDHC3_DATA6		0x1d0
+				MX8MN_IOMUXC_NAND_CLE_USDHC3_DATA7		0x1d0
+				MX8MN_IOMUXC_NAND_CE1_B_USDHC3_STROBE		0x190
 			>;
 		};
 
 		pinctrl_usdhc3_100mhz: usdhc3grp100mhz {
 			fsl,pins = <
-				MX8MN_IOMUXC_NAND_WE_B__USDHC3_CLK		0x40000194
-				MX8MN_IOMUXC_NAND_WP_B__USDHC3_CMD		0x1d4
-				MX8MN_IOMUXC_NAND_DATA04__USDHC3_DATA0		0x1d4
-				MX8MN_IOMUXC_NAND_DATA05__USDHC3_DATA1		0x1d4
-				MX8MN_IOMUXC_NAND_DATA06__USDHC3_DATA2		0x1d4
-				MX8MN_IOMUXC_NAND_DATA07__USDHC3_DATA3		0x1d4
-				MX8MN_IOMUXC_NAND_RE_B__USDHC3_DATA4		0x1d4
-				MX8MN_IOMUXC_NAND_CE2_B__USDHC3_DATA5		0x1d4
-				MX8MN_IOMUXC_NAND_CE3_B__USDHC3_DATA6		0x1d4
-				MX8MN_IOMUXC_NAND_CLE__USDHC3_DATA7		0x1d4
-				MX8MN_IOMUXC_NAND_CE1_B__USDHC3_STROBE 		0x194
+				MX8MN_IOMUXC_NAND_WE_B_USDHC3_CLK		0x40000194
+				MX8MN_IOMUXC_NAND_WP_B_USDHC3_CMD		0x1d4
+				MX8MN_IOMUXC_NAND_DATA04_USDHC3_DATA0		0x1d4
+				MX8MN_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x1d4
+				MX8MN_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x1d4
+				MX8MN_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x1d4
+				MX8MN_IOMUXC_NAND_RE_B_USDHC3_DATA4		0x1d4
+				MX8MN_IOMUXC_NAND_CE2_B_USDHC3_DATA5		0x1d4
+				MX8MN_IOMUXC_NAND_CE3_B_USDHC3_DATA6		0x1d4
+				MX8MN_IOMUXC_NAND_CLE_USDHC3_DATA7		0x1d4
+				MX8MN_IOMUXC_NAND_CE1_B_USDHC3_STROBE		0x194
 			>;
 		};
 
 		pinctrl_usdhc3_200mhz: usdhc3grp200mhz {
 			fsl,pins = <
-				MX8MN_IOMUXC_NAND_WE_B__USDHC3_CLK		0x40000196
-				MX8MN_IOMUXC_NAND_WP_B__USDHC3_CMD		0x1d6
-				MX8MN_IOMUXC_NAND_DATA04__USDHC3_DATA0		0x1d6
-				MX8MN_IOMUXC_NAND_DATA05__USDHC3_DATA1		0x1d6
-				MX8MN_IOMUXC_NAND_DATA06__USDHC3_DATA2		0x1d6
-				MX8MN_IOMUXC_NAND_DATA07__USDHC3_DATA3		0x1d6
-				MX8MN_IOMUXC_NAND_RE_B__USDHC3_DATA4		0x1d6
-				MX8MN_IOMUXC_NAND_CE2_B__USDHC3_DATA5		0x1d6
-				MX8MN_IOMUXC_NAND_CE3_B__USDHC3_DATA6		0x1d6
-				MX8MN_IOMUXC_NAND_CLE__USDHC3_DATA7		0x1d6
-				MX8MN_IOMUXC_NAND_CE1_B__USDHC3_STROBE 		0x196
+				MX8MN_IOMUXC_NAND_WE_B_USDHC3_CLK		0x40000196
+				MX8MN_IOMUXC_NAND_WP_B_USDHC3_CMD		0x1d6
+				MX8MN_IOMUXC_NAND_DATA04_USDHC3_DATA0		0x1d6
+				MX8MN_IOMUXC_NAND_DATA05_USDHC3_DATA1		0x1d6
+				MX8MN_IOMUXC_NAND_DATA06_USDHC3_DATA2		0x1d6
+				MX8MN_IOMUXC_NAND_DATA07_USDHC3_DATA3		0x1d6
+				MX8MN_IOMUXC_NAND_RE_B_USDHC3_DATA4		0x1d6
+				MX8MN_IOMUXC_NAND_CE2_B_USDHC3_DATA5		0x1d6
+				MX8MN_IOMUXC_NAND_CE3_B_USDHC3_DATA6		0x1d6
+				MX8MN_IOMUXC_NAND_CLE_USDHC3_DATA7		0x1d6
+				MX8MN_IOMUXC_NAND_CE1_B_USDHC3_STROBE		0x196
 			>;
 		};
 
 		pinctrl_wdog: wdoggrp {
 			fsl,pins = <
-				MX8MN_IOMUXC_GPIO1_IO02__WDOG1_WDOG_B		0xc6
+				MX8MN_IOMUXC_GPIO1_IO02_WDOG1_WDOG_B		0xc6
 			>;
 		};
 
 		pinctrl_usbotg1: usbotg1grp {
 			fsl,pins = <
-				MX8MN_IOMUXC_GPIO1_IO12__USB1_OTG_PWR    0x49
-				MX8MN_IOMUXC_GPIO1_IO13__USB1_OTG_OC     0x49
+				MX8MN_IOMUXC_GPIO1_IO12_USB1_OTG_PWR    0x49
+				MX8MN_IOMUXC_GPIO1_IO13_USB1_OTG_OC     0x49
 			>;
 		};
 
