EA: Adding eadisp and eatouch (merge from 2018.03)

--- a/arch/arm/mach-imx/Kconfig
+++ b/arch/arm/mach-imx/Kconfig
@@ -235,3 +235,8 @@ config IMX_TRUSTY_OS
 
 config SYS_ARM_CACHE_WRITEALLOC
 	bool "support cache write alloc"
+
+config CMD_EADISP
+        bool "Support Embedded Artists Display commands"
+        depends on ARCH_MX6 || ARCH_MX7
+
