--- a/arch/arm/dts/imx6sxea-com-kit.dts
+++ b/arch/arm/dts/imx6sxea-com-kit.dts
@@ -25,7 +25,8 @@
 		stdout-path = &uart1;
 	};
 
-	memory {
+	memory@80000000 {
+		device_type = "memory";
 		reg = <0x80000000 0x40000000>;
 	};
 
@@ -134,7 +135,7 @@
                         regulator-name = "enet_3v3";
                         regulator-min-microvolt = <3300000>;
                         regulator-max-microvolt = <3300000>;
-                        gpios = <&gpio2 0 GPIO_ACTIVE_LOW>;
+                        gpio = <&gpio2 0 GPIO_ACTIVE_LOW>;
                 };
 
 
@@ -190,7 +191,7 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_enet1>;
 	phy-supply = <&reg_enet_3v3>;
-	phy-mode = "rgmii";
+	phy-mode = "rgmii-id";
 	phy-handle = <&ethphy0>;
 	status = "okay";
 
@@ -274,7 +275,7 @@
 	sda-gpios = <&gpio1 1 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 
-	pmic: pfuze100@08 {
+	pmic: pfuze100@8 {
 		compatible = "fsl,pfuze200";
 		reg = <0x08>;
 
