--- a/configs/mx6sxea-com_defconfig
+++ b/configs/mx6sxea-com_defconfig
@@ -4,7 +4,6 @@ CONFIG_ARCH_MX6=y
 CONFIG_TARGET_MX6SXEA_COM=y
 CONFIG_ENV_SIZE=0x2000
 CONFIG_ENV_OFFSET=0x1FE000
-CONFIG_IMX_RDC=y
 CONFIG_SPL_GPIO_SUPPORT=y
 CONFIG_SPL_LIBCOMMON_SUPPORT=y
 CONFIG_SPL_LIBGENERIC_SUPPORT=y
@@ -16,6 +15,7 @@ CONFIG_SPL=y
 CONFIG_SPL_EXT_SUPPORT=y
 CONFIG_SPL_I2C_SUPPORT=y
 CONFIG_SPL_BOARD_INIT=y
+CONFIG_SPL_TEXT_BASE=0x00908000
 
 CONFIG_MXC_UART=y
 CONFIG_IMX_THERMAL=y
@@ -29,7 +29,6 @@ CONFIG_HUSH_PARSER=y
 CONFIG_CMD_BOOTZ=y
 # CONFIG_CMD_IMLS is not set
 # CONFIG_CMD_FLASH is not set
-CONFIG_CMD_DFU=y
 CONFIG_CMD_MMC=y
 CONFIG_CMD_I2C=y
 CONFIG_CMD_USB=y
@@ -43,15 +42,23 @@ CONFIG_CMD_EXT2=y
 CONFIG_CMD_EXT4=y
 CONFIG_CMD_EXT4_WRITE=y
 CONFIG_CMD_FAT=y
-CONFIG_DFU_MMC=y
+CONFIG_CMD_BMP=y
+CONFIG_CMD_MEMTEST=y
+CONFIG_CMD_PART=y
+CONFIG_CMD_REGULATOR=y
+CONFIG_REGMAP=y
+CONFIG_SYSCON=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_IMX6=y
 CONFIG_DFU_RAM=y
 CONFIG_DEFAULT_DEVICE_TREE="imx6sxea-com-kit"
+CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_DM_ETH=y
 CONFIG_DM_GPIO=y
+CONFIG_NR_DRAM_BANKS=1
 CONFIG_DM_I2C=y
 CONFIG_DM_MMC=y
+CONFIG_FSL_USDHC=y
 CONFIG_DM_PMIC_PFUZE100=y
 CONFIG_DM_PMIC=y
 CONFIG_DM_REGULATOR_FIXED=y
@@ -60,6 +67,9 @@ CONFIG_DM_REGULATOR_PFUZE100=y
 CONFIG_DM_REGULATOR=y
 CONFIG_DM_SPI=y
 CONFIG_DM_SPI_FLASH=y
+CONFIG_SF_DEFAULT_BUS=0
+CONFIG_SF_DEFAULT_MODE=0
+CONFIG_SF_DEFAULT_SPEED=40000000
 CONFIG_DM_USB=y
 CONFIG_CMD_FS_GENERIC=y
 CONFIG_CMD_SAVEENV=y
@@ -86,15 +96,20 @@ CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_ISSI=y
 CONFIG_PHYLIB=y
 
+CONFIG_DM_ETH_PHY=y
+CONFIG_MII=y
+CONFIG_PHY_ATHEROS=y
+CONFIG_RGMII=y
+
 CONFIG_FSL_QSPI=y
 CONFIG_CMD_EADISP=y
 
 CONFIG_CMD_FASTBOOT=y
 CONFIG_USB_FUNCTION_FASTBOOT=y
-CONFIG_FSL_FASTBOOT=y
+CONFIG_FASTBOOT_UUU_SUPPORT=y
+CONFIG_FEC_MXC=y
 CONFIG_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x83800000
 CONFIG_FASTBOOT_BUF_SIZE=0x40000000
 CONFIG_FASTBOOT_FLASH=y
-CONFIG_FASTBOOT_FLASH_MMC_DEV=1
 CONFIG_EFI_PARTITION=y
