--- a/configs/mx6ulea-com_defconfig
+++ b/configs/mx6ulea-com_defconfig
@@ -15,6 +15,7 @@ CONFIG_SPL=y
 CONFIG_SPL_EXT_SUPPORT=y
 CONFIG_SPL_I2C_SUPPORT=y
 CONFIG_SPL_BOARD_INIT=y
+CONFIG_SPL_TEXT_BASE=0x00908000
 
 CONFIG_MXC_UART=y
 CONFIG_IMX_THERMAL=y
@@ -42,11 +43,19 @@ CONFIG_CMD_EXT4=y
 CONFIG_CMD_EXT4_WRITE=y
 CONFIG_CMD_FAT=y
 CONFIG_CMD_FS_GENERIC=y
+CONFIG_CMD_BMP=y
+CONFIG_CMD_MEMTEST=y
+CONFIG_CMD_NET=y
 CONFIG_DEFAULT_DEVICE_TREE="imx6ulea-com-kit"
 CONFIG_DM_ETH=y
+CONFIG_DM_ETH_PHY=y
+CONFIG_FEC_MXC=y
+CONFIG_MII=y
 CONFIG_DM_GPIO=y
+CONFIG_NR_DRAM_BANKS=1
 CONFIG_DM_I2C=y
 CONFIG_DM_MMC=y
+CONFIG_FSL_USDHC=y
 CONFIG_DM_PMIC_PFUZE100=y
 CONFIG_DM_PMIC=y
 CONFIG_DM_REGULATOR_FIXED=y
@@ -56,7 +65,10 @@ CONFIG_DM_REGULATOR=y
 CONFIG_DM_USB=y
 CONFIG_CMD_SAVEENV=y
 CONFIG_ENV_IS_IN_MMC=y
+CONFIG_SYS_RELOC_GD_ENV_ADDR=y
 CONFIG_PHYLIB=y
+CONFIG_PHY_MICREL=y
+CONFIG_PHY_MICREL_KSZ8XXX=y
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_IMX6=y
 CONFIG_USB=y
@@ -64,6 +76,9 @@ CONFIG_USB_STORAGE=y
 CONFIG_OF_LIBFDT=y
 CONFIG_OF_CONTROL=y
 CONFIG_OF_BOARD_FIXUP=y
+
+# CONFIG_DM_VIDEO is not set
+# CONFIG_SYS_WHITE_ON_BLACK is not set
 
 CONFIG_CMD_EADISP=y
 
@@ -75,10 +90,10 @@ CONFIG_USB_GADGET_DOWNLOAD=y
 CONFIG_USB_GADGET_MANUFACTURER="FSL"
 CONFIG_USB_GADGET_VENDOR_NUM=0x0525
 CONFIG_USB_GADGET_PRODUCT_NUM=0xa4a5
-CONFIG_FSL_FASTBOOT=y
+
+CONFIG_FASTBOOT_UUU_SUPPORT=y
 CONFIG_FASTBOOT=y
 CONFIG_FASTBOOT_BUF_ADDR=0x83800000
 CONFIG_FASTBOOT_BUF_SIZE=0x40000000
 CONFIG_FASTBOOT_FLASH=y
-CONFIG_FASTBOOT_FLASH_MMC_DEV=1
 CONFIG_EFI_PARTITION=y
