--- a/arch/arm/dts/imx7dea-ucom-kit.dts
+++ b/arch/arm/dts/imx7dea-ucom-kit.dts
@@ -18,7 +18,8 @@
                 usdhc2 = &usdhc2;
 	};
 
-	memory {
+	memory@80000000 {
+		device_type = "memory";
 		reg = <0x80000000 0x80000000>;
 	};
 
@@ -152,7 +153,7 @@
         sda-gpios = <&gpio4 9 GPIO_ACTIVE_HIGH>;
 	status = "okay";
 
-	pmic: pfuze3000@08 {
+	pmic: pfuze3000@8 {
 		compatible = "fsl,pfuze3000";
 		reg = <0x08>;
 
@@ -312,15 +313,15 @@
 	imx7d-sdb {
 		pinctrl_hog_2: hoggrp-2 {
 			fsl,pins = <
-                                MX7D_PAD_GPIO1_IO05__GPIO1_IO5             0x14
-                                MX7D_PAD_GPIO1_IO00__WDOD1_WDOG_ANY        0x74
-                                MX7D_PAD_GPIO1_IO07__GPIO1_IO7             0x59
+                                MX7D_PAD_LPSR_GPIO1_IO05__GPIO1_IO5             0x14
+                                MX7D_PAD_LPSR_GPIO1_IO00__WDOG1_WDOG_ANY        0x74
+                                MX7D_PAD_LPSR_GPIO1_IO07__GPIO1_IO7             0x59
 			>;
 		};
 
 		pinctrl_pwm1: pwm1grp {
 			fsl,pins = <
-				MX7D_PAD_GPIO1_IO01__PWM1_OUT	  0x110b0
+				MX7D_PAD_LPSR_GPIO1_IO01__PWM1_OUT	  0x110b0
 			>;
 		};
 
