iMX7ULP: Port from 2018.03 to 2020.04

--- a/arch/arm/mach-imx/mx7ulp/Kconfig
+++ b/arch/arm/mach-imx/mx7ulp/Kconfig
@@ -41,10 +41,17 @@ config TARGET_MX7ULP_EVK
 	select MX7ULP
 	select SYS_ARCH_TIMER
 
+config TARGET_MX7ULPEA_UCOM
+	bool "Support EA mx7ulp uCOM board"
+	select MX7ULP
+	select SYS_ARCH_TIMER
+	select SUPPORT_SPL
+
 endchoice
 
 source "board/ea/mx7ulp_com/Kconfig"
 source "board/freescale/mx7ulp_val/Kconfig"
 source "board/freescale/mx7ulp_evk/Kconfig"
+source "board/embeddedartists/mx7ulpea-ucom/Kconfig"
 
 endif
