--- a/arch/arm/dts/imx7ulpea-ucom-kit_v2.dts
+++ b/arch/arm/dts/imx7ulpea-ucom-kit_v2.dts
@@ -76,7 +76,7 @@
 
 };
 
-/*&qspi1 {
+&qspi1 {
 	pinctrl-names = "default";
 	pinctrl-0 = <&pinctrl_qspi1_1>;
 	status = "okay";
@@ -85,10 +85,10 @@
 		reg = <0>;
 		#address-cells = <1>;
 		#size-cells = <1>;
-		compatible = "macronix,mx25r3235f";
+		compatible = "macronix,mx25r3235f", "jedec,spi-nor";
 		spi-max-frequency = <29000000>;
 	};
-};*/
+};
 
 
 &iomuxc1 {
@@ -194,10 +194,10 @@
 
 		pinctrl_qspi1_1: qspi1grp_1 {
 			fsl,pins = <
-				/* TODO: IMX7ULP_PAD_PTB7__QSPIA_SS1_B   0x43*/ /* SS1 */
+				IMX7ULP_PAD_PTB7__QSPIA_SS1_B   0x43 /* SS1 */
 				IMX7ULP_PAD_PTB8__QSPIA_SS0_B   0x43 /* SS0 */
 				IMX7ULP_PAD_PTB15__QSPIA_SCLK   0x43 /* SCLK */
-				/* TODO: IMX7ULP_PAD_PTB9__QSPIA_DQS     0x43*/ /* DQS */
+				IMX7ULP_PAD_PTB9__QSPIA_DQS     0x43 /* DQS */
 				IMX7ULP_PAD_PTB16__QSPIA_DATA3  0x43 /* D3 */
 				IMX7ULP_PAD_PTB17__QSPIA_DATA2  0x43 /* D2 */
 				IMX7ULP_PAD_PTB18__QSPIA_DATA1  0x43 /* D1 */
