--- a/configs/mx6sxea-com_defconfig
+++ b/configs/mx6sxea-com_defconfig
@@ -91,6 +91,7 @@ CONFIG_CI_UDC=y
 CONFIG_OF_LIBFDT=y
 CONFIG_OF_CONTROL=y
 CONFIG_OF_BOARD_FIXUP=y
+CONFIG_SPI=y
 CONFIG_SPI_FLASH_SPANSION=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_ISSI=y
