--- a/configs/mx7dea-ucom_defconfig
+++ b/configs/mx7dea-ucom_defconfig
@@ -69,13 +69,17 @@ CONFIG_DM_REGULATOR_GPIO=y
 CONFIG_DM_REGULATOR_PFUZE100=y
 CONFIG_DM_REGULATOR=y
 CONFIG_DM_SPI=y
+CONFIG_SOFT_SPI=y
 CONFIG_DM_SPI_FLASH=y
+CONFIG_SF_DEFAULT_MODE=0
+CONFIG_SF_DEFAULT_SPEED=40000000
 CONFIG_DM_USB=y
 CONFIG_CMD_SAVEENV=y
 CONFIG_ENV_IS_IN_MMC=y
 CONFIG_MMC_IO_VOLTAGE=y
 CONFIG_MMC_UHS_SUPPORT=y
 # CONFIG_MMC_HS200_SUPPORT is not set
+CONFIG_SPI=y
 CONFIG_SPI_FLASH_MACRONIX=y
 CONFIG_SPI_FLASH_STMICRO=y
 CONFIG_SPI_FLASH_ISSI=y
